traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:8: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    if (estFaceMur() && getDirection() == Direction.EST) {
    ^Snake:15: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    if (estFaceMur() && getDirection() == Direction.OUEST){
    ^